# LagrangeCodec

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-dynamic-lib.yml  build-static-lib.yml  build-static.yml  build.yml
include/: audio.h  common.h  silk.h  util.h
include/public/: audio.h  common.h  silk.h  video.h
src/: audio.cpp  silk.cpp  video.cpp
src/shim/: linux_aarch64_atomic_shim.c  linux_fcntl64_shim.c  mingw_time_shim.c
tests/: CMakeLists.txt  LagrangeCodecTests.cpp
vcpkg-overlay/ffmpeg/: portfile.cmake
